syntax = "proto3";

import "gorums.proto";

package proto;

option go_package = "paxos/fdproto";

service FailureDetector {
    rpc Ping(HeartBeat) returns (HeartBeat) {
		option (gorums.quorumcall) = true;
	}
}

message HeartBeat {
    int32 id = 1;
}
